--- a/views/results.pug
+++ b/views/results.pug
@@ -17,14 +17,25 @@ block content
 				th Visits
 				th First 9 PPD
 				th PPD
+				th Scores
 				th Winner
 		tbody
 			each player in players
 				tr
-					td= player.name
-					td= player.visits
-					td= player.first9ppd
-					td= player.ppd.toFixed(2)
+					td
+						p= player.name
+					td
+						p= player.visits
+					td
+						p= player.first9ppd.toFixed(2)
+					td
+						p= player.ppd.toFixed(2)
+					td
+						p= player.highScores['60+'] == 0 ? "" : "60+: " + player.highScores['60+']
+						p= player.highScores['100+'] == 0 ? "" : "100+ " + player.highScores['100+']
+						p= player.highScores['140+'] == 0 ? "" : "140+ " + player.highScores['140+']
+						p= player.highScores['180'] == 0 ? "" : "180  " + player.highScores['180']
+
 					if match.winner_id !== undefined && player.id === match.winner_id
 						td
 							span(class='glyphicon glyphicon-ok' aria-hidden='true')
@@ -46,8 +57,9 @@ block content
 			each throws in scores
 				tr
 					td= players[throws.player_id].name
-					td= throws.first_dart
-					td= throws.second_dart
-					td= throws.third_dart
-					td= throws.first_dart + throws.second_dart + throws.third_dart
-					td= ((throws.first_dart + throws.second_dart + throws.third_dart) / 3).toFixed(2)
+					td= throws.first_dart * throws.first_dart_multiplier
+					td= throws.second_dart * throws.second_dart_multiplier 
+					td= throws.third_dart * throws.third_dart_multiplier
+					td= (throws.first_dart * throws.first_dart_multiplier) + (throws.second_dart * throws.second_dart_multiplier) + (throws.third_dart * throws.third_dart_multiplier)
+					td= (((throws.first_dart * throws.first_dart_multiplier) + (throws.second_dart * throws.second_dart_multiplier) + (throws.third_dart * throws.third_dart_multiplier)) / 3).toFixed(2)
+
