--- a/views/results.pug
+++ b/views/results.pug
@@ -7,7 +7,7 @@ block content
 		ID: #{match.id} <br>
 		Started: #{match.created_at} <br>
 		Finished: #{match.end_time === undefined ? '' : match.end_time} <br>
-		Duration: #{((match.end_time - match.created_at) / (60 * 1000)).toFixed(1)} minutes <br>
+		Duration: #{((Date.parse(match.end_time)/1000 - Date.parse(match.created_at)/1000) / (60)).toFixed()} minutes <br>
 		Stakes: #{match.stake === "" ? "None" : match.stake}
 	
 	table(class='table table-striped table-bordered')
