--- a/views/playerStatistics.pug
+++ b/views/playerStatistics.pug
@@ -11,9 +11,19 @@ block content
 					th Won
 					th First 9 PPD
 					th Overall PPD
+					th Scores
 			tbody
 					tr
-						td= player.games_played
-						td= player.games_won
-						td= player.games_played == 0 ? 0 : (player.games_won / player.games_played).toFixed(2)
-						td= player.ppd.toFixed(2)
+						td
+							p= player.games_played
+						td
+							p= player.games_won
+						td
+							p= player.games_played == 0 ? 0 : (player.games_won / player.games_played).toFixed(2)
+						td
+							p= player.ppd.toFixed(2)
+						td 
+							p= player.highScores['60+'] == 0 ? "" : "60+: " + player.highScores['60+']
+							p= player.highScores['100+'] == 0 ? "" : "100+: " + player.highScores['100+']
+							p= player.highScores['140+'] == 0 ? "" : "140+: " + player.highScores['140+']
+							p= player.highScores['180'] == 0 ? "" : "180:  " + player.highScores['180']
