--- a/views/players.pug
+++ b/views/players.pug
@@ -48,7 +48,7 @@ block content
 						td= player.name
 						td= player.games_played
 						td= player.games_won
-						td= player.games_played == 0 ? 0 : (player.games_won / player.games_played).toFixed(2)
+						td= player.games_played == 0 ? 0 : (player.games_won * 100 / player.games_played).toFixed(2)
 						td
 							a(class='btn btn-primary' href='/player/' + player.id + '/stats') View
 
