--- a/views/index.pug
+++ b/views/index.pug
@@ -32,6 +32,7 @@ block content
 						select(class='form-control' name='matchType' id='matchTypeSelect')
 							option 301
 							option 501
+							option 701
 
 					div(class='form-group')
 						label(for='matchStakeSelect') Match Stake
