--- a/views/match.pug
+++ b/views/match.pug
@@ -1,7 +1,6 @@
 extends layout.pug
 
 block scripts
-	link(rel='stylesheet', href='/css/site.css')
 	script.
 		$(function () {
 			jQuery.getScript("/js/fastclick.js", function () {
@@ -69,9 +68,7 @@ block scripts
 						if (confirm('Game will be finished.')) {
 							// End game, 'click' submit
 							submitButton.data('finished', 1).trigger('click');
-							return;
 						} else {
-							// Just in case someone made a mistake, go back to last dart
 							// Clear the score for thrown dart
 							dart.text('');
 						}
@@ -79,7 +76,7 @@ block scripts
 					} else {
 						isBust = true;
 					}
-				} else if (scoreAfterThrow == 1 || scoreAfterThrow < 0) {
+				} else if (scoreAfterThrow <= 1) {
 					isBust = true;
 				}
 
@@ -89,10 +86,6 @@ block scripts
 						submitButton.data('busted', 1).trigger('click');
 						return;
 					} else {
-						// Just in case someone made a mistake, go back to last dart
-						// window.darts_thrown--;
-						// Revert the score
-						currentPlayer.text(parseInt(currentPlayer.text()));
 						// Clear the score for thrown dart
 						dart.text('');
 					}
