--- a/views/playerComparison.pug
+++ b/views/playerComparison.pug
@@ -2,12 +2,12 @@ extends layout.pug
 
 block content
 	h2 Player Comparison
-	
+
 	div(class='table-responsive')
-		table(id='playerComparisonTable' class='table table-striped table-bordered')
+		table(id='player_comparison_table' class='table table-striped table-bordered')
 			thead
 				tr
-					th 
+					th
 					each player in players
 						th= player.name
 			tbody
@@ -36,7 +36,7 @@ block content
 					each player in players
 						td TODO
 				tr
-					td(class='col-sm-2') Best 501
+					td(class='col-sm-2') Best 301
 					each player in players
 						td TODO
 				tr
