--- a/views/results.pug
+++ b/views/results.pug
@@ -1,5 +1,37 @@
 extends layout.pug
 
+block scripts
+	script.
+		$(function () {
+			$('.edit-visit').click(function () {
+				var visitNumber = $(this).data('visit');
+
+				var firstDartField = $('#first-dart-visit-' + visitNumber);
+				var secondDartField = $('#second-dart-visit-' + visitNumber);
+				var thirdDartField = $('#third-dart-visit-' + visitNumber);
+
+				var firstDartMultiplierField = $('#first-dart-multiplier-visit-' + visitNumber);
+				var secondDartMultiplierField = $('#second-dart-multiplier-visit-' + visitNumber);
+				var thirdDartMultiplierField = $('#third-dart-multiplier-visit-' + visitNumber);
+
+				var firstDartValue = firstDartField.data('score');
+				var secondDartValue = secondDartField.data('score');
+				var thirdDartValue = thirdDartField.data('score');
+
+				var firstDartMultiplierValue = firstDartMultiplierField.data('multiplier');
+				var secondDartMultiplierValue = secondDartMultiplierField.data('multiplier');
+				var thirdDartMultiplierValue = thirdDartMultiplierField.data('multiplier');
+
+				firstDartField.text('').append('<input type="text" value="' + firstDartValue + '" class="form-control" style="max-width: 50px;" />');
+				secondDartField.text('').append('<input type="text" value="' + secondDartValue + '" class="form-control" style="max-width: 50px;" />');
+				thirdDartField.text('').append('<input type="text" value="' + thirdDartValue + '" class="form-control" style="max-width: 50px;" />');
+
+				firstDartMultiplierField.text('').append('<input type="text" value="' + firstDartMultiplierValue + '" class="form-control" style="max-width: 50px;" />');
+				secondDartMultiplierField.text('').append('<input type="text" value="' + secondDartMultiplierValue + '" class="form-control" style="max-width: 50px;" />');
+				thirdDartMultiplierField.text('').append('<input type="text" value="' + thirdDartMultiplierValue + '" class="form-control" style="max-width: 50px;" />');
+			});
+		});
+
 block content
 	h2 Results
 
@@ -44,22 +76,34 @@ block content
 	p.
 		Starting score was #{match.starting_score}, and a total of #{scores.length * 3} darts were thrown by #{Object.keys(players).length} players
 
-	table(class='table table-striped table-bordered')
+	table(class='table table-striped table-bordered' id='table-match-visits')
 		thead
 			tr
 				th Player
-				th First Dart
-				th Second Dart
-				th Third Dart
+				th(colspan='3') First Dart
+				th(colspan='3') Second Dart
+				th(colspan='3') Third Dart
 				th Total
 				th PPD
+				th(class="txt-center") Options
 		tbody
 			each throws in scores
-				tr
+				tr(id="visit-" + throws.id)
 					td= players[throws.player_id].name
-					td= throws.first_dart * throws.first_dart_multiplier
-					td= throws.second_dart * throws.second_dart_multiplier 
-					td= throws.third_dart * throws.third_dart_multiplier
+					td(id='first-dart-visit-' + throws.id data-score=throws.first_dart)= throws.first_dart
+					td(id='first-dart-multiplier-visit-' + throws.id data-multiplier=throws.first_dart_multiplier)= throws.first_dart_multiplier
+					td
+						label(class='btn btn-success')= throws.first_dart * throws.first_dart_multiplier
+					td(id='second-dart-visit-' + throws.id data-score=throws.second_dart)= throws.second_dart
+					td(id='second-dart-multiplier-visit-' + throws.id data-multiplier=throws.second_dart_multiplier)= throws.second_dart_multiplier
+					td
+						label(class='btn btn-success')= throws.second_dart * throws.second_dart_multiplier
+					td(id='third-dart-visit-' + throws.id data-score=throws.third_dart)= throws.third_dart
+					td(id='third-dart-multiplier-visit-' + throws.id data-multiplier=throws.third_dart_multiplier)= throws.third_dart_multiplier
+					td
+						label(class='btn btn-success')= throws.third_dart * throws.third_dart_multiplier
 					td= (throws.first_dart * throws.first_dart_multiplier) + (throws.second_dart * throws.second_dart_multiplier) + (throws.third_dart * throws.third_dart_multiplier)
 					td= (((throws.first_dart * throws.first_dart_multiplier) + (throws.second_dart * throws.second_dart_multiplier) + (throws.third_dart * throws.third_dart_multiplier)) / 3).toFixed(2)
-
+					td(class="txt-center")
+						button(type="button" class="btn btn-default edit-visit" data-visit=throws.id)
+							span(class="glyphicon glyphicon-edit" aria-hidden="true")
